Trocado Home.html para Index.html

--- a/servicos.html
+++ b/servicos.html
@@ -22,7 +22,7 @@
             </a>
             <!-- Desktop Menu -->
             <div class="hidden md:flex space-x-6">
-                <a href="Home.html" class="text-gray-600 hover:text-blue-600">Home</a>
+                <a href="Index.html" class="text-gray-600 hover:text-blue-600">Home</a>
                 <a href="servicos.html" class="text-blue-600 font-semibold border-b-2 border-blue-600">Serviços</a>
                 <a href="Contato.html" class="text-gray-600 hover:text-blue-600">Contato</a>
             </div>
