trocado as url do header

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
             </a>
             <!-- Desktop Menu -->
             <div class="hidden md:flex space-x-6">
-                <a href="Index.html" class="text-blue-600 font-semibold border-b-2 border-blue-600">Home</a>
+                <a href="/" class="text-blue-600 font-semibold border-b-2 border-blue-600">Home</a>
                 <a href="servicos.html" class="text-gray-600 hover:text-blue-600">Serviços</a>
-                <a href="Contato.html" class="text-gray-600 hover:text-blue-600">Contato</a>
+                <a href="contato.html" class="text-gray-600 hover:text-blue-600">Contato</a>
             </div>
             <!-- Hamburger Button -->
             <div class="md:hidden">
