--- a/contato.html
+++ b/contato.html
@@ -17,14 +17,14 @@
     <!-- Header -->
     <header class="bg-white shadow-md sticky top-0 z-50">
         <nav class="container mx-auto px-6 py-4 flex justify-between items-center">
-            <a href="Home.html" class="text-2xl font-bold text-blue-600">
+            <a href="/" class="text-2xl font-bold text-blue-600">
                 <i class="fas fa-rocket"></i> XPTO Consultoria WP
             </a>
             <!-- Desktop Menu -->
             <div class="hidden md:flex space-x-6">
-                <a href="Index.html" class="text-gray-600 hover:text-blue-600">Home</a>
+                <a href="/" class="text-gray-600 hover:text-blue-600">Home</a>
                 <a href="servicos.html" class="text-gray-600 hover:text-blue-600">Serviços</a>
-                <a href="Contato.html" class="text-blue-600 font-semibold border-b-2 border-blue-600">Contato</a>
+                <a href="contato.html" class="text-blue-600 font-semibold border-b-2 border-blue-600">Contato</a>
             </div>
             <!-- Hamburger Button -->
             <div class="md:hidden">
