--- a/servicos.html
+++ b/servicos.html
@@ -17,7 +17,7 @@
     <!-- Header -->
     <header class="bg-white shadow-md sticky top-0 z-50">
         <nav class="container mx-auto px-6 py-4 flex justify-between items-center">
-            <a href="Home.html" class="text-2xl font-bold text-blue-600">
+            <a href="/" class="text-2xl font-bold text-blue-600">
                 <i class="fas fa-rocket"></i> XPTO Consultoria WP
             </a>
             <!-- Desktop Menu -->
@@ -35,9 +35,9 @@
         </nav>
         <!-- Mobile Menu -->
         <div id="mobile-menu" class="hidden md:hidden bg-white border-t border-gray-200">
-            <a href="Home.html" class="block py-2 px-4 text-sm text-gray-600 hover:bg-gray-50">Home</a>
+            <a href="/" class="block py-2 px-4 text-sm text-gray-600 hover:bg-gray-50">Home</a>
             <a href="servicos.html" class="block py-2 px-4 text-sm text-blue-600 bg-gray-50">Serviços</a>
-            <a href="Contato.html" class="block py-2 px-4 text-sm text-gray-600 hover:bg-gray-50">Contato</a>
+            <a href="contato.html" class="block py-2 px-4 text-sm text-gray-600 hover:bg-gray-50">Contato</a>
         </div>
     </header>
 
